src/main/java/ast/CalcParser.java
// Generated from .\src\main\java\ast\Calc.g4 by ANTLR 4.9.1

package ast;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.ArrayList;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CalcParser extends Parser {
    public static final int
            PUT = 1, SET = 2, ASSN = 3, PLUS = 4, MINUS = 5, TIMES = 6, LPAR = 7, RPAR = 8, ID = 9,
            NUM = 10, EOL = 11, SPACE = 12;
    public static final int
            RULE_prog = 0, RULE_com = 1, RULE_expr = 2, RULE_prim = 3, RULE_var = 4;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public CalcParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "prog", "com", "expr", "prim", "var"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'put'", "'set'", "'='", "'+'", "'-'", "'*'", "'('", "')'"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, "PUT", "SET", "ASSN", "PLUS", "MINUS", "TIMES", "LPAR", "RPAR",
                "ID", "NUM", "EOL", "SPACE"
        };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Calc.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final ProgContext prog() throws RecognitionException {
        ProgContext _localctx = new ProgContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_prog);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(13);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == PUT || _la == SET) {
                    {
                        {
                            setState(10);
                            com();
                        }
                    }
                    setState(15);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(16);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ComContext com() throws RecognitionException {
        ComContext _localctx = new ComContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_com);
        try {
            setState(28);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case PUT:
                    _localctx = new PutContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(18);
                    match(PUT);
                    setState(19);
                    expr();
                    setState(20);
                    match(EOL);
                }
                break;
                case SET:
                    _localctx = new SetContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(22);
                    match(SET);
                    setState(23);
                    var();
                    setState(24);
                    match(ASSN);
                    setState(25);
                    expr();
                    setState(26);
                    match(EOL);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ExprContext expr() throws RecognitionException {
        ExprContext _localctx = new ExprContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_expr);
        int _la;
        try {
            _localctx = new OpContext(_localctx);
            enterOuterAlt(_localctx, 1);
            {
                setState(30);
                prim();
                setState(35);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUS) | (1L << TIMES))) != 0)) {
                    {
                        {
                            setState(31);
                            ((OpContext) _localctx)._tset67 = _input.LT(1);
                            _la = _input.LA(1);
                            if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUS) | (1L << TIMES))) != 0))) {
                                ((OpContext) _localctx)._tset67 = (Token) _errHandler.recoverInline(this);
                            } else {
                                if (_input.LA(1) == Token.EOF) matchedEOF = true;
                                _errHandler.reportMatch(this);
                                consume();
                            }
                            ((OpContext) _localctx).operator.add(((OpContext) _localctx)._tset67);
                            setState(32);
                            prim();
                        }
                    }
                    setState(37);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final PrimContext prim() throws RecognitionException {
        PrimContext _localctx = new PrimContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_prim);
        try {
            setState(44);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case NUM:
                    _localctx = new NumContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(38);
                    match(NUM);
                }
                break;
                case ID:
                    _localctx = new IdContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(39);
                    match(ID);
                }
                break;
                case LPAR:
                    _localctx = new ParensContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(40);
                    match(LPAR);
                    setState(41);
                    expr();
                    setState(42);
                    match(RPAR);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final VarContext var() throws RecognitionException {
        VarContext _localctx = new VarContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_var);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(46);
                match(ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ProgContext extends ParserRuleContext {
        public ProgContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode EOF() {
            return getToken(CalcParser.EOF, 0);
        }

        public List<ComContext> com() {
            return getRuleContexts(ComContext.class);
        }

        public ComContext com(int i) {
            return getRuleContext(ComContext.class, i);
        }

        @Override
        public int getRuleIndex() {
            return RULE_prog;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CalcVisitor) return ((CalcVisitor<? extends T>) visitor).visitProg(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class ComContext extends ParserRuleContext {
        public ComContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public ComContext() {
        }

        @Override
        public int getRuleIndex() {
            return RULE_com;
        }

        public void copyFrom(ComContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class SetContext extends ComContext {
        public SetContext(ComContext ctx) {
            copyFrom(ctx);
        }

        public TerminalNode SET() {
            return getToken(CalcParser.SET, 0);
        }

        public VarContext var() {
            return getRuleContext(VarContext.class, 0);
        }

        public TerminalNode ASSN() {
            return getToken(CalcParser.ASSN, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode EOL() {
            return getToken(CalcParser.EOL, 0);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CalcVisitor) return ((CalcVisitor<? extends T>) visitor).visitSet(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class PutContext extends ComContext {
        public PutContext(ComContext ctx) {
            copyFrom(ctx);
        }

        public TerminalNode PUT() {
            return getToken(CalcParser.PUT, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode EOL() {
            return getToken(CalcParser.EOL, 0);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CalcVisitor) return ((CalcVisitor<? extends T>) visitor).visitPut(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class ExprContext extends ParserRuleContext {
        public ExprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public ExprContext() {
        }

        @Override
        public int getRuleIndex() {
            return RULE_expr;
        }

        public void copyFrom(ExprContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class OpContext extends ExprContext {
        public Token PLUS;
        public List<Token> operator = new ArrayList<Token>();
        public Token MINUS;
        public Token TIMES;
        public Token _tset67;

        public OpContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        public List<PrimContext> prim() {
            return getRuleContexts(PrimContext.class);
        }

        public PrimContext prim(int i) {
            return getRuleContext(PrimContext.class, i);
        }

        public List<TerminalNode> PLUS() {
            return getTokens(CalcParser.PLUS);
        }

        public TerminalNode PLUS(int i) {
            return getToken(CalcParser.PLUS, i);
        }

        public List<TerminalNode> MINUS() {
            return getTokens(CalcParser.MINUS);
        }

        public TerminalNode MINUS(int i) {
            return getToken(CalcParser.MINUS, i);
        }

        public List<TerminalNode> TIMES() {
            return getTokens(CalcParser.TIMES);
        }

        public TerminalNode TIMES(int i) {
            return getToken(CalcParser.TIMES, i);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CalcVisitor) return ((CalcVisitor<? extends T>) visitor).visitOp(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class PrimContext extends ParserRuleContext {
        public PrimContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public PrimContext() {
        }

        @Override
        public int getRuleIndex() {
            return RULE_prim;
        }

        public void copyFrom(PrimContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class ParensContext extends PrimContext {
        public ParensContext(PrimContext ctx) {
            copyFrom(ctx);
        }

        public TerminalNode LPAR() {
            return getToken(CalcParser.LPAR, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode RPAR() {
            return getToken(CalcParser.RPAR, 0);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CalcVisitor) return ((CalcVisitor<? extends T>) visitor).visitParens(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class NumContext extends PrimContext {
        public NumContext(PrimContext ctx) {
            copyFrom(ctx);
        }

        public TerminalNode NUM() {
            return getToken(CalcParser.NUM, 0);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CalcVisitor) return ((CalcVisitor<? extends T>) visitor).visitNum(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class IdContext extends PrimContext {
        public IdContext(PrimContext ctx) {
            copyFrom(ctx);
        }

        public TerminalNode ID() {
            return getToken(CalcParser.ID, 0);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CalcVisitor) return ((CalcVisitor<? extends T>) visitor).visitId(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class VarContext extends ParserRuleContext {
        public VarContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode ID() {
            return getToken(CalcParser.ID, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_var;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CalcVisitor) return ((CalcVisitor<? extends T>) visitor).visitVar(this);
            else return visitor.visitChildren(this);
        }
    }
}